:fix: fix responsive horizontal overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,5 +11,6 @@
     min-height: 100%;
     height: auto;
     max-height: none;
+    max-width: 100%;
   }
 }
