--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -12,7 +12,7 @@
   color: var(--font);
 
   @media (max-width: 730px) {
-    width: 100%;
+    max-width: 100%;
     padding: 4rem 1rem;
 
   }
